# babilas

./: .clang-format  CMakeLists.txt  README.md
img/: img.qrc
src/: account.cc  account.hh  accountmanager.cc  accountmanager.hh  babilas-config.hh.in  client.cc  client.hh  constants.cc  constants.hh  contact.cc  contact.hh  contactlistmodel.cc  contactlistmodel.hh  conversation.cc  conversation.hh  main.cc  photoprovider.cc  photoprovider.hh
src/qml/: About.qml  AccountContactList.qml  AccountDetails.qml  AccountList.qml  Chat.qml  ChatInput.qml  ChatMessage.qml  ChatMessages.qml  ContactHeader.qml  ContactList.qml  EmojiChooser.qml  EmojiChooser.qmlc  emojis.xml  main.qml  qml.qrc
tools/: emoji_converter.py
translations/: CMakeLists.txt
